# voxels

./: .gitignore  Cargo.toml  Makefile.toml
.cargo/: config.toml
shaders/: blit.wgsl  box.wgsli  compute.wgsl  compute_globals.wgsli  hit.wgsli  mipmap.wgsl  ray.wgsli  state.include.wgsl  state.wgsli  trace.wgsli
src/: app.rs  gpu.rs  lib.rs  main.rs  physics.rs  state.rs  ui.rs
src/gpu/: mod.rs  pipelines.rs  render_resolution.rs  shader.rs  state.rs  voxel.rs
src/gpu/pipelines/: compute.rs  mipmap.rs  mod.rs  render.rs
src/gpu/pipelines/compute/: compute.wgsl  mod.rs  shader.comp
src/gpu/pipelines/render/: blit.wgsl  mod.rs
src/gpu/shader/: load.rs
src/state/: camera.rs  mod.rs
src/ui/: mod.rs  window.rs
test/shaders/: inc3.include.wgsl  main.wgsl
test/shaders/level1/: inc6.include.wgsl
voxels/: Cargo.toml
voxels-winit-wgpu/: Cargo.toml
voxels-winit-wgpu/shaders/: state.wgsli  trace.wgsli
voxels-winit-wgpu/src/: app.rs  gpu.rs
voxels-winit-wgpu/src/gpu/: state.rs
voxels-winit-wgpu/src/gpu/shader/: watch.rs
voxels-winit-wgpu/src/ui/: window.rs
voxels-winit-wgpu/test/shaders/: inc1.include.wgsl  inc2.include.wgsl
voxels-winit-wgpu/test/shaders/level1/level2/: inc8.include.wgsl
voxels/src/: camera.rs  cave.rs  inspector.rs  main.rs  player.rs
voxels/src/cave/: chunk.rs  mesh.rs  pbr.rs  spawn.rs  voxelize.rs
voxels_winit_wgpu/: Cargo.toml
voxels_winit_wgpu/shaders/: compute_globals.wgsli  hit.wgsli  mipmap.wgsl
voxels_winit_wgpu/src/: app.rs  gpu.rs  main.rs  state.rs
voxels_winit_wgpu/src/gpu/pipelines/: mipmap.rs  render.rs
voxels_winit_wgpu/test/shaders/level1/: inc4.include.wgsl
voxels_winit_wgpu/test/shaders/level1/level2/: inc5.include.wgsl  inc7.include.wgsl
