[package]
name = "voxels"
version = "0.1.0"
publish = false
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
winit = "0.24"
wgpu = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
bytemuck = { version = "1.5", features = ["derive"] }
glam = "0.14"
simdnoise = "3"
