[package]
name = "voxels"
version = "0.1.0"
publish = false
edition = "2018"
default-run = "voxels"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
winit = "0.24"
wgpu = "0.8"
tracing = "0.1"
tracing-subscriber = "0.2"
futures-lite = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.15"
simdnoise = "3"
rayon = "1"
egui = "0.12"
epi = "0.12"
egui_wgpu_backend = "0.8"
egui_winit_platform = "0.7"
regex = "1"
lazy_static = "1"
naga = "0.4"
notify = "4"
rapier3d = { version = "0.9", features = ["simd-stable", "parallel"] }
nalgebra = {version = "*", features = ["convert-glam015"]}
