[package]
name = "voxels-winit-wgpu"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
winit = "0.26"
wgpu = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-lite = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.17"
simdnoise = "3"
rayon = "1"
egui = "0.16"
epi = "0.16"
egui_wgpu_backend = "0.16"
egui_winit_platform = "0.13"
regex = "1"
lazy_static = "1"
naga = "0.8"
notify = "4"
rapier3d = { version = "0.11", features = ["simd-stable", "parallel"] }
nalgebra = { version = "0.29", features = ["convert-glam017"]}
