[package]
name = "voxels"
version = "0.1.0"
edition = "2021"
default-run = "voxels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "803e8cdf80ea481c7ffd127b7d6480b0ccc58830" }
