[package]
name = "voxels"
version = "0.1.0"
edition = "2021"
default-run = "voxels"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.14"
bevy_egui = "0.17"
simdnoise = "3"
block-mesh = "0.2"
futures-lite = "1"

[dependencies.bevy]
version = "0.9"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    # These are the default features:
    # (keep whichever you like)
    "render",
    "bevy_winit",
    "bevy_gilrs",
    # "bevy_audio",
    # "png",
    "hdr",
    # "vorbis",
    # "x11",
    "filesystem_watcher",
    # These are other features that may be of interest:
    # (add any of these that you need)
    # "bmp",
    # "tga",
    # "dds",
    # "jpeg",
    # "wav"
    # "flac",
    # "mp3",
    # "subpixel_glyph_atlas",
    # "dynamic",
    # "serialize",
    "trace",
    # "trace_tracy",
    # "trace_chrome",
    # "wgpu_trace",
    "wayland",
]
